--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 
     <body>
         <div id="pageContainer">
+
+            <button type="button" name="refresh" id="restartButton">Restart</button>
+
             <div id="grid">
 
             </div>
