--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
 
             <button type="button" name="refresh" id="restartButton">Restart</button>
 
-            <div id="grid">
+            <div id="etch-a-sketch">
+                <div id="grid">
 
+                </div>
             </div>
         </div>
 
