Added clear button and random changing color for each cell

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <body>
         <div id="pageContainer">
 
-            <button type="button" name="refresh" id="restartButton">Restart</button>
+            <button type="button" name="refresh" id="restartButton">RESTART</button>
+            <button type="button" name="clear" id="clearButton">CLEAR</button>
 
             <div id="etch-a-sketch">
                 <div id="grid">
