Adding opaqueCell fuction

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
         <div id="pageContainer">
 
             <button type="button" name="refresh" id="restartButton">RESTART</button>
+
+            <!-- button to the last challenge of the project -->
+            <button type="button" name="opacity" id="opacityButton">OPACITY</button>
             <button type="button" name="clear" id="clearButton">CLEAR</button>
 
             <div id="etch-a-sketch">
