Cells get darker by pass and can get random colors.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <button type="button" name="refresh" id="restartButton">RESTART</button>
 
             <!-- button to the last challenge of the project -->
-            <button type="button" name="opacity" id="opacityButton">OPACITY</button>
+            <button type="button" name="opacity" id="rainbowButton">RAINBOW</button>
             <button type="button" name="clear" id="clearButton">CLEAR</button>
 
             <div id="etch-a-sketch">
